cabal-version:       3.8
name:                notekeeper
version:             0.1.0.0
category:            Web
build-type:          Simple

library katas
  build-depends:      base >=4.10
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite my-tests
  main-is: Main.hs
  build-depends: base, hspec, mtl, split
  -- other-modules: AOC.Day01, 
  --                AOC.Day02, 
  --                AOC.Day03, 
  --                AOC.Day04,
  -- exposed-modules: AOC.Day01,
  --                  AOC.Day02,
  --                  AOC.Day03,
  --                  AOC.Day04,
  --                  AOC.Day05,
  hs-source-dirs: tests 
                  src
  --                 Day01 
  --                 Day02 Day03 Day04 Day05
  default-language: Haskell2010