cabal-version:       3.8
name:                aoc
version:             0.1.0.0
category:            Web
build-type:          Simple

library
  build-depends:      base >=4.10
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite my-tests
  main-is: Main.hs
  build-depends: base, hspec, mtl, split
  other-modules:   Day01.Day01,
                   Day02.Day02,
                   Day03.Day03,
                   Day04.Day04,
                   Day05.Day05,
                   Day06.Day06,
  hs-source-dirs: tests 
                  src
  default-language: Haskell2010